# CSV_Sanitizer_Schema_Validator

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
data/Input/: dirty_data.csv
data/Output/: clean_data.csv
src/: main.py
src/CSV_Sanitizer/: cli.py  core.py
tests/: test_main.py
