[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-sanitizer-schema-validator"
version = "0.1.0"
description = "Stream, sanitize, and schema-validate messy CSV files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hemin Gandhi"}
]
dependencies = [
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
]

[project.scripts]
csv-sanitizer = "CSV_Sanitizer.cli:main"

[project.urls]
Homepage = "https://github.com/hgandhi2010/CSV_Sanitizer_Schema_Validator"

[tool.hatch.build.targets.wheel]
packages = ["src/CSV_Sanitizer"]